# Engine

./: .gitignore  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/include/: Game.h  Screen.h
Engine/include/Screens/: GameScreen.h  TitleScreen.h
Engine/src/: Game.cpp  main.cpp
Engine/src/Screens/: TitleScreen.cpp
Engine/src/Widgets/: Label.cpp
examples/basic/: main.cpp
include/: Game.h  Screen.h  Widget.h
include/Screens/: GameScreen.h  LogoScreen.h  Screen.h  TitleScreen.h
include/UI/: Label.h  Layout.h  Widget.h
include/UI/Widgets/: Label.h  Layout.h  Widget.h
src/: Game.cpp  Widget.cpp  main.cpp
src/Screens/: Screen.cpp
src/UI/: Label.cpp  Layout.cpp
src/UI/Widgets/: Label.cpp  Layout.cpp
